crates/syncable-state-derive/tests/ui/tuple_struct.stderr
error: SyncableState only supports named-field structs
 --> tests/ui/tuple_struct.rs:4:8
  |
4 | struct TupleState(SyncableString);
  |        ^^^^^^^^^^
